--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,39 @@
-# Core LangChain and LangGraph dependencies
-langchain>=0.1.0
-langgraph>=0.0.32
-langchain-google-genai>=0.0.8
+# Core LangChain packages
+langchain>=0.2.0,<0.4.0
+langchain-core>=0.2.0,<0.4.0
+langchain-community>=0.2.0,<0.4.0
+langgraph>=0.3.0,<0.4.0
 
-# Google AI dependencies
-google-generativeai>=0.3.2
-google-cloud-aiplatform>=1.38.1
+# LangGraph BigTool for advanced tool management
+langgraph-bigtool>=0.0.3,<0.1.0
 
-# GUI dependencies
-customtkinter>=5.2.0
+# Google AI integration
+langchain-google-genai>=1.0.0,<2.0.0
+google-generativeai>=0.3.0,<1.0.0
 
-# Utility dependencies
+# OpenAI for embeddings (used by BigTool)
+openai>=1.0.0,<2.0.0
+langchain-openai>=0.2.0,<0.4.0
+
+# MongoDB vector store dependencies
+pymongo>=4.0.0,<5.0.0
+motor>=3.0.0,<4.0.0  # Async MongoDB driver for potential async support
+
+# GUI
+customtkinter>=5.0.0
+
+# Core utilities
+pydantic>=2.0.0,<3.0.0
+loguru>=0.7.0
 python-dotenv>=1.0.0
-pydantic>=2.5.2
-pydantic-settings>=2.0.0
-typing-extensions>=4.8.0
-requests>=2.31.0
-aiohttp>=3.9.1
 
-# File handling
-pillow>=10.1.0
-python-magic-bin>=0.4.14
+# Audio processing
+librosa>=0.10.0
+soundfile>=0.12.0
+numpy>=1.21.0
 
-# Logging and configuration
-loguru>=0.7.2
-pyyaml>=6.0.1 
+# Additional dependencies
+requests>=2.25.0
+typing-extensions>=4.0.0
+jsonschema>=4.0.0
+tenacity>=8.0.0 
