--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ langchain>=0.2.0,<0.4.0
 langchain-core>=0.2.0,<0.4.0
 langchain-community>=0.2.0,<0.4.0
 langgraph>=0.3.0,<0.4.0
+langgraph-supervisor>=0.0.1,<0.1.0
 
 # LangGraph BigTool for advanced tool management
 langgraph-bigtool>=0.0.3,<0.1.0
