--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,12 @@ python-dotenv>=1.0.0
 librosa>=0.10.0
 soundfile>=0.12.0
 numpy>=1.21.0
+google-cloud-texttospeech>=2.0.0,<3.0.0
+google-cloud-speech>=2.0.0,<3.0.0
+
+# Image processing
+google-cloud-vision>=3.0.0,<4.0.0
+pillow>=9.0.0,<11.0.0
 
 # Additional dependencies
 requests>=2.25.0
